--- a/.ci_support/linux_aarch64_python3.6.____cpythontarget_platformlinux-aarch64.yaml
+++ b/.ci_support/linux_aarch64_python3.6.____cpythontarget_platformlinux-aarch64.yaml
@@ -11,7 +11,7 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge,c4aarch64,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -25,7 +25,7 @@ libffi:
 ncurses:
 - '6.1'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -49,7 +49,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.6'
+- 3.6.* *_cpython
 readline:
 - '8.0'
 sqlite:
