--- a/.ci_support/linux_aarch64_python3.7.____cpythontarget_platformlinux-aarch64.yaml
+++ b/.ci_support/linux_aarch64_python3.7.____cpythontarget_platformlinux-aarch64.yaml
@@ -1,11 +1,17 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
 - '7'
+cdt_arch:
+- aarch64
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -13,13 +19,13 @@ cxx_compiler:
 cxx_compiler_version:
 - '7'
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil-aarch64
 libffi:
 - '3.2'
 ncurses:
 - '6.1'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -43,13 +49,13 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.6'
+- 3.7.* *_cpython
 readline:
 - '8.0'
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
