--- a/.ci_support/linux_python3.7.____cpythontarget_platformlinux-64.yaml
+++ b/.ci_support/linux_python3.7.____cpythontarget_platformlinux-64.yaml
@@ -1,29 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '9'
+- '7'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '9'
+- '7'
+docker_image:
+- condaforge/linux-anvil-comp7
 libffi:
 - '3.2'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 ncurses:
 - '6.1'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -47,13 +43,13 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.6'
+- 3.7.* *_cpython
 readline:
 - '8.0'
 sqlite:
 - '3'
 target_platform:
-- osx-64
+- linux-64
 tk:
 - '8.6'
 xz:
