--- a/.ci_support/osx_python3.7.____cpythontarget_platformosx-64.yaml
+++ b/.ci_support/osx_python3.7.____cpythontarget_platformosx-64.yaml
@@ -23,7 +23,7 @@ macos_min_version:
 ncurses:
 - '6.1'
 openssl:
-- 1.1.1a
+- 1.1.1
 pin_run_as_build:
   bzip2:
     max_pin: x
@@ -47,7 +47,7 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '2.7'
+- 3.7.* *_cpython
 readline:
 - '8.0'
 sqlite:
