--- a/.ci_support/linux_aarch64_python3.6.____cpythontarget_platformlinux-aarch64.yaml
+++ b/.ci_support/linux_aarch64_python3.6.____cpythontarget_platformlinux-aarch64.yaml
@@ -1,25 +1,27 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '9'
+- '7'
+cdt_arch:
+- aarch64
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '9'
+- '7'
+docker_image:
+- condaforge/linux-anvil-aarch64
 libffi:
 - '3.2'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 ncurses:
 - '6.1'
 openssl:
@@ -47,11 +49,13 @@ pin_run_as_build:
   zlib:
     max_pin: x.x
 python:
-- '3.7'
+- 3.6.* *_cpython
 readline:
 - '8.0'
 sqlite:
 - '3'
+target_platform:
+- linux-aarch64
 tk:
 - '8.6'
 xz:
