--- a/.ci_support/linux_ppc64le_python3.7.____cpythontarget_platformlinux-ppc64le.yaml
+++ b/.ci_support/linux_ppc64le_python3.7.____cpythontarget_platformlinux-ppc64le.yaml
@@ -1,25 +1,19 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 bzip2:
 - '1'
 c_compiler:
 - gcc
 c_compiler_version:
-- '7'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- '8'
 channel_sources:
-- conda-forge
+- conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '7'
+- '8'
 docker_image:
-- condaforge/linux-anvil-aarch64
+- condaforge/linux-anvil-ppc64le
 libffi:
 - '3.2'
 ncurses:
@@ -42,22 +36,18 @@ pin_run_as_build:
     max_pin: x
   sqlite:
     max_pin: x
-  tk:
-    max_pin: x.x
   xz:
     max_pin: x.x
   zlib:
     max_pin: x.x
 python:
-- '3.7'
+- 3.7.* *_cpython
 readline:
 - '8.0'
 sqlite:
 - '3'
 target_platform:
-- linux-aarch64
-tk:
-- '8.6'
+- linux-ppc64le
 xz:
 - '5.2'
 zlib:
