--- a/.ci_support/win_python3.6.____cpython.yaml
+++ b/.ci_support/win_python3.6.____cpython.yaml
@@ -13,11 +13,6 @@ pin_run_as_build:
   vc:
     max_pin: x
 python:
-- '3.7'
+- 3.6.* *_cpython
 vc:
 - '14'
-zip_keys:
-- - python
-  - vc
-  - c_compiler
-  - cxx_compiler
