--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -150,7 +150,7 @@ test:
 
 about:
   home: http://www.python.org/
-  license: PSF
+  license: Python-2.0
   license_file: LICENSE
   summary: General purpose programming language
   description: |
