--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,12 +5,11 @@
 {% if linkage_nature != '' %}
   {% set linkage_nature = "_" ~ linkage_nature %}
 {% endif %}
+{% set dbg_abi = '' %}
 {% set debug = os.environ.get('PY_INTERP_DEBUG', '') %}
 {% if debug != '' %}
   {% set debug = "_dbg" %}
-  {% set dbg_abi = "d" %}
-{% else %}
-  {% set dbg_abi = "" %}
+  {% set dbg_abi = "d" %}  # [win]
 {% endif %}
 
 package:
@@ -108,7 +107,7 @@ build:
     noarch:
       - python
     weak:
-      - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}{{ dbg_api }}
+      - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}{{ dbg_abi }}
   # string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
   # run_exports:
   #  - python * *_cpython
@@ -155,7 +154,7 @@ requirements:
     - ld_impl_{{target_platform}}  # [linux]
 {% endif %}
   run_constrained:
-    - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}{{ dbg_api }}
+    - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}{{ dbg_abi }}
 
 test:
   requires:
