--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -227,7 +227,7 @@ test:
 
 about:
   home: http://www.python.org/
-  license: PSF
+  license: PSF-2.0
   license_file: LICENSE
   summary: General purpose programming language
   description: |
