--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -129,8 +129,8 @@ requirements:
     - patch  # [not win]
     - m2-patch  # [win]
     - posix  # [win]
-    - ld_impl_{{target_platform}}  # [linux]
-    - binutils_impl_{{target_platform}} >=2.33.1  # [linux]
+    - ld_impl_{{ target_platform }}  # [linux]
+    - binutils_impl_{{ target_platform }} >=2.33.1  # [linux]
   host:
     - bzip2  # [not win]
     - sqlite
@@ -141,9 +141,9 @@ requirements:
     - tk  # [not win]
     - ncurses  # [linux]
     - libffi  # [not win]
-    - ld_impl_{{target_platform}}  # [linux]
+    - ld_impl_{{ target_platform }}  # [linux]
   run:
-    - ld_impl_{{target_platform}}  # [linux]
+    - ld_impl_{{ target_platform }}  # [linux]
   run_constrained:
     - python_abi 3.8.* *_cp38
 
@@ -195,7 +195,7 @@ test:
 
 about:
   home: http://www.python.org/
-  license: PSF
+  license: Python-2.0
   license_file: LICENSE
   summary: General purpose programming language
   description: |
