--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -83,7 +83,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 1010
+  number: 1011
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -147,6 +147,7 @@ test:
     - python -c "import sys; files = [f for f in sys.argv[2:] if ' -partition=none' in open(f, 'r').read()]; assert len(files) == 0, files" ${PREFIX}/lib/*/*.py  # [unix]
     - test -f ${PREFIX}/lib/libpython3.6m.so      # [linux] 
     - test -f ${PREFIX}/lib/libpython3.6m.dylib   # [osx] 
+    - test ! -f default.profraw   # [osx]
       
 
 about:
