end the build string with the build number
Conda as well as other tools assume that package names end with an
underscore and a build number. Use this pattern in this package and move
the cpython_ string to the start of the build string.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -99,7 +99,7 @@ build:
   # match python.org compiler standard
   skip: True            # [win and int(float(vc)) < 14]
 # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
-  string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
+  string: cpython{{ linkage_nature }}{{ debug }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}
   run_exports:
     noarch:
       - python
