--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -83,7 +83,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 1011
+  number: 1012
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -96,7 +96,7 @@ build:
     - bzip2             # [unix]
   # match python.org compiler standard
   skip: True            # [win and vc != 14]
-  string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_cpython
+  string: cpython_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}
   run_exports:
     noarch:
       - python
