--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -124,10 +124,10 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
-    - ld_impl_{{ target_platform }}      # [linux]
+    - ld_impl_{{ target_platform }} >=2.34     # [linux]
   run:
     - ncurses                            # [unix]
-    - ld_impl_{{ target_platform }}      # [linux]
+    - ld_impl_{{ target_platform }} >=2.34    # [linux]
   run_constrained:
     - python_abi 3.6.* *_cp36m
 
