--- a/recipe/tests/cmake/CMakeLists.txt
+++ b/recipe/tests/cmake/CMakeLists.txt
@@ -8,4 +8,4 @@ option(PY_VER, "Python version to use")
 find_package(PythonInterp ${PY_VER} REQUIRED)
 #             PATHS $ENV{CONDA_PREFIX})
 # This goes after, since it uses PythonInterp as hint
-find_library(PythonLibs ${PY_VER} REQUIRED)
+find_package(PythonLibs ${PY_VER} REQUIRED)
