--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -176,6 +176,10 @@ outputs:
         - pydoc -h
         - python3-config --help  # [not win]
         - python -m venv test-venv  # [not win]
+        - set "PIP_NO_BUILD_ISOLATION=False"  # [win]
+        - set "PIP_NO_DEPENDENCIES=True"  # [win]
+        - set "PIP_IGNORE_INSTALLED=True"  # [win]
+        - set "PIP_NO_INDEX=True"  # [win]
         - python -m venv %%TEMP%%\venv  # [win]
         - python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [not win]
         -  _CONDA_PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [linux64]
