More debug output on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -170,6 +170,7 @@ outputs:
         - tests/cython/*
         - tests/prefix-replacement/*
       commands:
+        - echo on  # [win]
         - python -V
         - python3 -V            # [not win]
         - 2to3 -h
