Debug windows env

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -171,6 +171,7 @@ outputs:
         - tests/prefix-replacement/*
       commands:
         - echo on  # [win]
+        - set  # [win]
         - python -V
         - python3 -V            # [not win]
         - 2to3 -h
