--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,3 +6,5 @@ cxx_compiler:                  # [win]
   - vs2017                     # [win]
 vc:                            # [win]
   - 14.1                       # [win]
+MACOSX_SDK_VERSION:
+- '10.15'
