--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,9 @@ source:
       - patches/0022-Add-CondaEcosystemModifyDllSearchPath.patch
       - patches/0026-Revert-part-of-https-bugs.python.org-issue33895-http.patch
       - patches/0027-cross-compile-darwin.patch
+      - patches/gh21114.patch
+      - patches/gh21241.patch
+      - patches/gh21228.patch
 
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
