--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -190,8 +190,8 @@ outputs:
         -  _CONDA_PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [linux64]
         # check for unreplaced @ symbols in sysconfig files
         - for f in ${CONDA_PREFIX}/lib/python*/_sysconfig*.py; do echo "Checking $f:"; if [[ `rg @ $f` ]]; then echo "FAILED ON $f"; cat $f; exit 1; fi; done  # [linux64 or osx]
-        - test ! -f ${PREFIX}/lib/libpython3.8.a  # [unix]
-        - test ! -f ${PREFIX}/lib/libpython3.8.nolto.a  # [unix]
+        - test ! -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.a  # [unix]
+        - test ! -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.nolto.a  # [unix]
         - pushd tests
         -   pushd distutils
         -     python setup.py install -v -v
