--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -8,14 +8,8 @@ jobs:
     vmImage: macOS-10.15
   strategy:
     matrix:
-      osx_64_python3.6.____cpythontarget_platformosx-64:
-        CONFIG: osx_64_python3.6.____cpythontarget_platformosx-64
-        UPLOAD_PACKAGES: 'True'
-      osx_64_python3.7.____cpythontarget_platformosx-64:
-        CONFIG: osx_64_python3.7.____cpythontarget_platformosx-64
-        UPLOAD_PACKAGES: 'True'
-      osx_64_python3.8.____cpythontarget_platformosx-64:
-        CONFIG: osx_64_python3.8.____cpythontarget_platformosx-64
+      osx_64_target_platformosx-64:
+        CONFIG: osx_64_target_platformosx-64
         UPLOAD_PACKAGES: 'True'
     maxParallel: 8
   timeoutInMinutes: 360
