--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,17 +34,18 @@ source:
       - patches/0012-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
       - patches/0013-Disable-new-dtags-in-unixccompiler.py.patch
       - patches/0014-Fix-cross-compilation-on-Debian-based-distros.patch
-      # - patches/0015-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
+      - patches/0015-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
       - patches/0016-Unvendor-openssl.patch
-      # - patches/0017-Unvendor-sqlite3.patch
+      - patches/0017-Unvendor-sqlite3.patch
       # https://bugs.python.org/issue35644
       - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
       - patches/0019-Win-Add-back-the-DLLSuffix-used-to-find-the-openssl-.patch
       - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
-      - patches/0021-roll-back-2e33ecd-for-py_compile.main.patch
+      # Seems to be upstream
+      # - patches/0021-roll-back-2e33ecd-for-py_compile.main.patch
       # Python 3.8 is pretty broken without this.
-      # - patches/0022-Add-CondaEcosystemModifyDllSearchPath.patch
-      # - patches/0026-Revert-part-of-https-bugs.python.org-issue33895-http.patch
+      - patches/0022-Add-CondaEcosystemModifyDllSearchPath.patch
+      - patches/0026-Revert-part-of-https-bugs.python.org-issue33895-http.patch
       - patches/0027-cross-compile-darwin.patch
       - patches/gh21114.patch
       - patches/gh21241.patch
