--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,9 +41,8 @@ source:
       - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
       - patches/0019-Win-Add-back-the-DLLSuffix-used-to-find-the-openssl-.patch
       - patches/0020-Use-ranlib-from-env-if-env-variable-is-set.patch
-      # Seems to be upstream
+      # Seems to be upstream https://github.com/python/cpython/pull/17134
       # - patches/0021-roll-back-2e33ecd-for-py_compile.main.patch
-      # Python 3.8 is pretty broken without this.
       - patches/0022-Add-CondaEcosystemModifyDllSearchPath.patch
       - patches/0026-Revert-part-of-https-bugs.python.org-issue33895-http.patch
       - patches/0027-cross-compile-darwin.patch
