--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -232,6 +232,7 @@ outputs:
   - name: libpython-static
     build:
       activate_in_script: True
+      ignore_run_exports:   # [unix]
       # Would like to be able to append to the calculated build string here, ping @msarahan, is this possible?
       string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ linkage_nature }}{{ debug }}_cpython
     script: build_static.sh  # [unix]
